2012-06-27  Frank Warmerdam  <warmerdam@pobox.com>

	* src/nad2bin.c: Fix byte swapping for bigendian platforms (#157)

2012-06-07  Frank Warmerdam  <warmerdam@google.com>

	* src/pj_init.c: avoid leaking vgridlist_geoid (#175).

2012-06-01  Martin Desruisseaux <martin.desruisseaux@geomatys.fr>

	* Removed the old JNI wrappers from trunk. Those wrappers are
	still present on the 4.8 branch as deprecated classes.

2012-05-31  Martin Desruisseaux <martin.desruisseaux@geomatys.fr>

	* Replaced usages of NAN C/C++ constant by the java.lang.Double.NaN constant.
	This was done because not all C/C++ compilers define the NAN constant, and for
	making sure that the bits pattern is exactly the one expected by Java.

2012-03-25  Frank Warmerdam  <warmerdam@pobox.com>

	* src/Makefile.am: Add org_proj4_PJ.h to files to distribute.

2012-03-13  Frank Warmerdam  <warmerdam@google.com>

	* src/projects.h, src/pj_list.c: avoid using #include directly on a
	macro expansion - it is unnecessary and makes for problems in my work
	environment.

2012-03-06  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 4.8.0 release candidate.

	* nad/epsg: regenerate with +no_uoff for hotine oblique mercator (#104)

	* src/PJ_sconics.c: Fix missing P->sig term in pconic forward
	projection equation (#148).

2012-03-03  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_omerc.c: Support +no_uoff and +no_off  (#128)

	* src/PJ_stere.c: Cleanup odd code construct (#147)

2012-02-26  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_geos.c, nad/testvarious: Added GEOS +sweep and add GEOS
	to the test suite (#146)

	* nad/CH: added swiss datum related definitions from strk (#145)

	* src/Makefile.am, src/mutltistresstest.c: provide for building
	multistresstest in the makefile, and slightly improve it.

2012-02-25  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: regenerate with +datum (#122)

2012-02-20  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.8.0 Beta1.
